<?xml version="1.0" encoding="utf-8"?>
<!--
  - Copyright 2012 Google Inc.
  -
  - Licensed under the Apache License, Version 2.0 (the "License"); you may not
  - use this file except in compliance with the License. You may obtain a copy
  - of the License at
  -
  - http://www.apache.org/licenses/LICENSE-2.0
  -
  - Unless required by applicable law or agreed to in writing, software
  - distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  - WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  - License for the specific language governing permissions and limitations
  - under the License.
-->
<resources>

    <string name="app_name">FRB Notification</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">Message from FRB</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_requesting_activation">Trying (attempt %1$d/%2$d) to to send activation request to FRBN Server.</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on FRBN Server.</string>
    <string name="server_registered">From FRBN Server: successfully added device!</string>
    <string name="server_activation_sent">From FRBN Server: activation request received. Email sent with token number!</string>
    <string name="server_unregistered">From FRBN Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on FRBN Server after %1$d attempts.</string>
    <string name="server_activation_error">Could not send activation request to FRBN Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on FRBN Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_activation">FRB Notification</string>
    <string name="activation_warning">This application is only meant to be used by employees of Federal Reserve Bank of San Francisco. Any unauthorized use will be prosecuted. Immediately uninstall this application If you are not an Federal Reserve Bank employee.</string>
    <string name="activation_email_prompt">Enter your FRB email</string>
    <string name="activation_send_button_text">Send Activation Request</string>
    <string name="activation_email_hint">type email here</string>
    <string name="title_activity_verify_activation">Verify Activation</string>
    <string name="activation_verification_token_prompt">Enter token (check your email)</string>
    <string name="verify_activation_complete_btn_caption">Send token</string>
    <string name="verify_activation_btn_start_over_caption">Start over (change email)</string>
    <string name="title_activity_message_display">MessageDisplayActivity</string>
    <string name="message_delete_text">Delete all messages</string>

</resources>